<resources>
    <string name="instapager_login_html" formatted="false">&lt;!DOCTYPE html> &lt;html> &lt;head> &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"> &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"> &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"> &lt;title>%s&lt;/title> &lt;style type=\"text/css\"> body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style> &lt;/head> &lt;body> &lt;script type=\"text/javascript\"> function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script> &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"> %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"> &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/> &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/> &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/> &lt;/div> &lt;p>&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/>&lt;/p> &lt;/form> &lt;/body> &lt;/html></string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="pull_to_refresh_pull_label"><Data>&lt;font color=#7d7d7d>为爱狂奔,乐此不疲&lt;/font>&lt;br/>&lt;font color=#adadad>下拉刷新&lt;/font></Data></string>
    <string name="pull_to_refresh_release_label"><Data>&lt;font color=#7d7d7d>为爱狂奔,乐此不疲&lt;/font>&lt;br/>&lt;font color=#adadad>松手刷新…&lt;/font></Data></string>
    <string name="pull_to_refresh_refreshing_label"><Data>&lt;font color=#7d7d7d>为爱狂奔,乐此不疲&lt;/font>&lt;br/>&lt;font color=#adadad>加载中&lt;/font></Data></string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="ssdk_recomm_share_share_to_another_plats">分享到更多平台</string>
    <string name="ssdk_recomm_app_friends_title">您有&lt;font color=#ed4456>%1$s&lt;/font>位好友正在使用这个应用</string>
    <string name="ssdk_recomm_download">立即下载</string>
    <string name="ssdk_recomm_view_count">%s人看过</string>
    <string name="ssdk_recomm_friends_sharing">他们正在分享</string>
    <string name="ssdk_recomm_share_before_second">%s秒前</string>
    <string name="ssdk_recomm_share_before_minute">%s分钟前</string>
    <string name="ssdk_recomm_share_before_hour">%s小时前</string>
    <string name="ssdk_recomm_share_before_date">%s天前</string>
    <string name="ssdk_recomm_share_to">分享至 %s</string>
    <string name="ssdk_recomm_share_msg_link">网页链接</string>
    <string name="ssdk_recomm_today_news">今日新闻</string>
    <string name="ssdk_recomm_close">关闭</string>
    <string name="ssdk_recomm_click_for_more">点击加载更多</string>
    <string name="ssdk_recomm_webpage_def_title">网页</string>
    <string name="ssdk_recomm_share_completed">分享成功</string>
    <string name="ssdk_recomm_share_failed">分享失败</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">请启动或升级微信最新版本</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_pwd">密码</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="laiwang">来往</string>
    <string name="laiwangmoments">来往动态</string>
    <string name="alipay">支付宝朋友</string>
    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="app_name">花礼网---Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_finish_dialog_title">温馨提示</string>
    <string name="str_finish_dialog_content">确定退出HUA.com客户端吗？</string>
    <string name="str_finish_dialog_confirm">确定</string>
    <string name="str_finish_dialog_cancel">取消</string>
    <string name="action_refresh">刷新</string>
    <string name="json_error">加载失败</string>
    <string name="network_unavailable">网络已经断开，请检查一下您的网络</string>
    <string name="str_error_title">哎呀，出错了！</string>
    <string name="str_error_content_left">可能原因:</string>
    <string name="str_error_content_right">"网络不稳定
尚未接入互联网
输入的网址不正确
安全软件禁止访问网络"</string>
    <string name="bottom_home">首页</string>
    <string name="bottom_classify">分类</string>
    <string name="bottom_cart">购物车</string>
    <string name="bottom_story">故事</string>
    <string name="bottom_my">我的</string>
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
    <string name="title_route_plan_demo">2. 路线规划(RoutePlanDemo)</string>
    <string name="no_more_chance">今天的机会用完了，明天再来玩吧</string>
    <string name="try_shake_again">手气不好，再摇一次！</string>
    <string name="shake_count">您今天还可以摇%1$s次</string>
    <string name="foot_pull_to_show">  单品推荐</string>
    <string name="foot_release_to_show">  释放加载</string>
    <string name="foot_pull_down_back">  上拉返回</string>
    <string name="foot_release_to_back">  释放返回</string>
    <string name="activity_activate_send">获取验证码</string>
    <string name="activity_activate_send_intervel">重新发送(%1$s)</string>
    <string name="activity_voice_speek">请说出您心仪的商品</string>
    <string name="activity_voice_try_again">"未识别出您的话,
请点击话筒重说"</string>
    <string name="preparing_card">准备SD卡中</string>
    <string name="no_storage_card">无存储卡</string>
    <string name="not_enough_space">存储空间不足</string>
    <string name="saving_image">保存图片中</string>
    <string name="download_ing">正在下载客户端</string>
    <string name="download_ing_percent">正在下载最新版  %1$s</string>
    <string name="download_failure">下载客户端失败,点击重试</string>
    <string name="download_success">下载客户端成功,点击安装</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_pause_notification_prefix">暂停:</string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="umeng_common_icon">icon</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
</resources>